--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "@spider-cloud/spider-client": "^0.0.27",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "groq-sdk": "^0.5.0",
     "openai": "^4.52.0",
     "socket.io": "^4.7.5"
   },
