--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/socket.js",
     "dev-css": "npx tailwindcss -i \"./public/css/input.css\" -o \"./public/css/output.css\" --watch"
   },
   "keywords": [],
